# qq_bot

./: .env.dev  README.md  __init__.py  bot.py  index.html  package.json  pyproject.toml  qqmsgsavefile  tsconfig.js  vite.config.js
flask_web(deprecated)/: __init__.py
msg/: 20220331.db  2106184570.db  answer.db  question.db  savemsg.db
mybot/plugins/froward_info/: __init__.py
src/: App.vue
src/api/: index.js  request.js
src/components/: AddQuestion.vue  Answer copy.vue  Answer.vue  Header.vue  HisQuest.vue  Leftside.vue  Question.vue  Questions copy.vue  Questions.vue  Sidebar.vue
src/login/: login.py
src/plugins/fastapi/: __init__.py  config.py  db_io.py  diy_bot.py
src/plugins/fastapi_web/: __init__.py
src/plugins/msg_save/: __init__.py
src/plugins/save_msg/: __init__.py
src/plugins/send_qusetion/: __init__.py
src/router/: index.js
src/utils/: request.js
src/views/: Home.vue  Login.vue  Overview.vue  Question.vue
src/views/dashboard/workbench/: index.vue
test/: test.py
