[tool.poetry]
name = "bot_back"
version = "0.1.0"
description = "bot_back"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebot2 = "^2.0.0-beta.2"
fastapi = "0.73"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
black = {version = "^22.1.0", allow-prereleases = true}

[tool.nonebot]
plugins = []
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
